# multimodal-emotion-recognition

./: .gitignore  dataset.py  main.py  model.py  opts.py  predict.py  pyproject.toml  train.py  transforms.py  utils.py  validation.py
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
datasets/: icml.py  nparray.py  ravdess.py
models/: efficientface.py  modulator.py  multimodalcnn.py  transformer_timm.py
ravdess_preprocessing/: create_annotations.py  extract_audios.py  extract_faces.py
