[tool.poetry]
name = "multimodal-emotion-recognition"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = { version = "^2.2.1", source="torch" }
torchvision = { version = "^0.17.1", source="torch" }
torchaudio = { version = "^2.2.1", source="torch" }
librosa = "^0.10.1"
opencv-python = "^4.9.0.80"
tqdm = "^4.66.2"
facenet-pytorch = "^2.5.3"
setuptools = "^69.2.0"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
